Fix chat layoyt braking after long msg, wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -201,6 +201,12 @@ body {
   text-align: left;
   padding-bottom: 0px;
   padding: 5px;
+  width: 450px;
+  white-space: pre-wrap;      /* CSS3 */
+ white-space: -moz-pre-wrap; /* Firefox */
+ white-space: -pre-wrap;     /* Opera <7 */
+ white-space: -o-pre-wrap;   /* Opera 7 */
+ word-wrap: break-word;      /* IE */
 }
 
 #chat-box {
